# CMakeList.txt : CMake project for 22_EvtRWLock2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (22_EvtRWLock2 "22_EvtRWLock2.cpp" "22_EvtRWLock2.h")

# TODO: Add tests and install targets if needed.
